Fix some overflow issues with Edge
Edge has some issues with overflows, this should address them.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
@@ -17,6 +17,7 @@
         display: flex;
         flex-flow: row nowrap;
         flex: 1;
+        overflow: auto;
 
         @include for-tablet-down() {
             flex-flow: column nowrap !important;
