--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/content-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/content-panel.scss
@@ -1,4 +1,5 @@
 ﻿.admin-panel-list {
     display: flex;
     flex-flow: column nowrap;
+    overflow: auto;
 }
